<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">安全考试</string>
    <string name="image_translucent_bar">image_translucent_bar</string>
    <string name="instridution">说明</string>
    <string name="person_name">Hippophae</string>
    <string name="fisfh">完成</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="action_testings">更新题库</string>
    <string name="login_account">账号/手机号</string>
    <string name="login_bnt">登录</string>
    <string name="account_no">还没有账号？</string>
    <string name="register_bnt">注册帐号</string>
    <string name="skipqusetion">跳过</string>
    <string name="checkqusetion">开始</string>
    <string name="nextqusetion">下题</string>
    <string name="sigerselect">单选项</string>
    <string name="mutiselect">多选项目</string>
    <string name="judgeA">单选项</string>
    <string name="answer">答案</string>
    <string name="note">备注</string>
    <string name="ksxm">安全考试</string>
    <string name="t_15">40分钟</string>
    <string name="forgetpass">忘记密码</string>
    <string name="bindphone">绑定手机</string>
    <string name="changepass">修改密码</string>
    <string name="lookgrade">查看成绩</string>
    <string name="empty_table">清空表</string>
    <string name="set_head">修改头像</string>
    <string name="exit_app">测试</string>
    <string name="exit_sys">修改</string>
    <string name="title_activity_settings">设置</string>
    <string name="drawer_open">开</string>
    <string name="drawer_close">关</string>
    <!-- Strings related to Settings -->
    <string name="this_is_fragment">One hundred of solitude</string>


    <string name="jdt">jdt</string>
    <string name="ltitle">你好，怎么了</string>
    <string name="remenberme">记住我</string>
    <string name="tv_nick">昵称</string>
    <string name="et_nick">昵称</string>
    <string name="et_nick_n">昵称</string>
    <string name="tv_nick_n">昵称</string>
    <string name="tihao">题目</string>
    <string name="dwonload">下载</string>
    <string name="gallay">相册</string>
    <string name="camery">拍照</string>
    <string name="upload">上传</string>
    <string name="info_name">吴佳宝</string>
    <string name="info_class">tenerify</string>
    <string name="info_number">18335054303</string>
    <string name="info_person">个人信息</string>
    <string name="info_production">产品信息</string>

    <string name="add_paper">添加试卷</string>
    <string name="update_paper">更新试卷</string>
    <string name="select_paper">选择试卷</string>
    <string name="title_activity_eaxm">EaxmActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="auther">牧之河</string>
    <string name="contact">294967877@qq.com</string>
    <string name="face">face</string>
    <string name="tv_head">安全管理人员考试</string>
    <string name="error_research">更新科目</string>
    <string name="error_share">分享</string>
    <string name="submit">提交</string>
    <string name="add">添加</string>
    <string name="add_papers">添加试卷</string>
    <string name="ask">问一个问题</string>
    <string name="id_10">10、</string>
    <string name="adage">人不会死在绝境，却往往栽在十字路口</string>

    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很报歉，程序栽在十字路口。</string>
    <string name="submit_report">请给我发邮件报告错误，以便尽快修复，谢谢！</string>
    <string name="notify_priority">notify_priority</string>
    <string name="title_activity_setting">设置</string>
    <string name="xiaomi_attention">
        <![CDATA[小米系统用户请进入系统应用:安全中心->授权管理->自启动应用管理 后允许『安全考试』自启动，否则无法自启动]]></string>
    <string name="toast_close">当前为关闭。</string>
    <string name="toast_open">当前为开启</string>
    <string name="cloud">云盘</string>
    <string name="TooYoung">Too young, too simple,sometimes naive.\n太年轻，太简单，有时还天真。</string>
    <string name="camera">相机</string>
    <string name="picture">相册</string>
    <string name="reset">重设</string>
    <string name="done">完成</string>
    <string name="test">测试</string>
    <string-array name="cities">
        <item>Pittsburgh</item>
        <item>Allentown/Bethlehem</item>
        <item>Erie</item>

    </string-array>
    <string-array name="airport_codes">
        <item>PHL</item>
        <item>PIT</item>
        <item>ABE</item>
    </string-array>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_pick_rationale">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="permission_denied">Permission was denied. Please consider granting it in order to use all features.</string>
    <string name="permission_denied_never_ask_again">Permission was denied with never ask again.</string>
    <string name="cropview">剪切</string>
    <string name="shoe_save">显示保存</string>
    <string name="add_friead">分享</string>
    <string name="sys_gallery">相册</string>
    <string name="choose_pic">选择</string>
    <string name="publish">发布</string>
    <string name="label">标签</string>
    <string name="safe">"坚持“管理、装备、培训”三并重，是我国煤矿安全生产的基本原则。\n"</string>
    <string name="title_activity_scrolling">滚动视图</string>
    <string name="title_setting">设置</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
