<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:fitsSystemWindows="true"
      tools:context=".activitis.KnowledgeActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/empty_table"
            android:orderInCategory="100"
            android:title="@string/lookgrade"
            app:showAsAction="never"/>

        <item
            android:id="@+id/update_paper"
            android:orderInCategory="100"
            android:title="@string/update_paper"
            app:showAsAction="never"/>
        <item
            android:id="@+id/update_tiku"
            android:orderInCategory="100"
            android:title="@string/action_testings"
            app:showAsAction="never"/>
        <item
            android:id="@+id/update_subject"
            android:orderInCategory="100"
            android:title="@string/error_research"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_share"
            android:orderInCategory="100"
            android:title="@string/error_share"
            app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

        <item
            android:icon="@drawable/ic_free_breakfast_black_24dp"
            android:title="@string/cloud"/>
        <item
            android:icon="@drawable/firebrick"
            android:title="标签"/>
    </group>


</menu>
