<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/MatchMatch.Vertical"
              android:background="@color/air_speed_label"
              android:fitsSystemWindows="true">

    <LinearLayout
        style="@style/MatchWrap.Vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <CheckBox
            android:id="@+id/cb_moment_list_downloadable"
            style="@style/WrapWrap"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:checked="true"
            android:text="@string/shoe_save"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_moment_list_add"
            style="@style/MatchWrapTv"
            android:layout_width="105dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/shape_button"
            android:text="@string/add_friead"/>

        <TextView
            android:id="@+id/tv_moment_list_system"
            style="@style/MatchWrapTv"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/shape_button"
            android:text="@string/sys_gallery"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_moment_list_moments"
        style="@style/MatchMatch"
        android:layout_margin="8dp"/>

</LinearLayout>