<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout="@layout/preference_item"
    android:title="@string/title_activity_setting">
    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="人性化自由选择">


        <CheckBoxPreference
            android:defaultValue="false"
            android:key="auto_login"
            android:layout="@layout/preference_item"
            android:summary="当前为不保存"
            android:title="保存登录密码"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="night_mode"
            android:layout="@layout/preference_item"
            android:summary="正常模式"
            android:title="夜间模式"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:layout="@layout/preference_item"
            android:summaryOff="@string/toast_close"
            android:summaryOn="@string/toast_open"
            android:title="开启每日一题"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:layout="@layout/preference_item"
            android:summaryOff="当前为黑色"
            android:summaryOn="当前为白色"
            android:title="通知栏消息字体颜色"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:layout="@layout/preference_item"
            android:summaryOff="@string/xiaomi_attention"
            android:summaryOn="@string/xiaomi_attention"
            android:title="开机自启动"/>


    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="帮助">
        <Preference
            android:layout="@layout/preference_item"
            android:title="关于">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://weibo.com/u/2043282821"/>
        </Preference>

        <Preference
            android:layout="@layout/preference_item"
            android:title="检查更新">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://murainy.github.io"/>
        </Preference>


    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="感谢有你">
        <Preference
            android:layout="@layout/preference_item"
            android:summary="有趣的灵魂百里挑一"
            android:title="作者：牧之河"/>

        <Preference
            android:layout="@layout/preference_item"
            android:title="退出登录"/>
    </PreferenceCategory>
</PreferenceScreen>