<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:visibility="invisible">
    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/id_10" android:textColor="@color/base_tab_indicator_text_color" android:textSize="18sp" android:visibility="visible"/>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/id"
        android:text="@string/ask"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:visibility="visible"/>

    <RadioGroup
        android:id="@+id/judge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/question"
        android:layout_below="@+id/question"
        android:layout_margin="16dp"
        android:background="@color/air_speed_label"
        android:foreground="@color/transparent"
        android:longClickable="false"
        android:transitionGroup="true"
        android:visibility="visible"
        android:weightSum="1">

        <RadioButton
            android:id="@+id/judgeA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:checked="false"
            android:padding="@dimen/dp_4"
            android:text="@string/judgeA"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/judgeB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="@dimen/dp_4"
            android:singleLine="false"
            android:text="@string/judgeA"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/single_option_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/question"
        android:layout_below="@+id/judge"
        android:layout_margin="16dp"
        android:background="@color/air_speed_label"
        android:foreground="@color/transparent"
        android:transitionGroup="true"
        android:visibility="visible"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/single_option_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:checked="false"
            android:text="@string/sigerselect"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/single_option_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sigerselect"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp"/>


        <RadioButton
            android:id="@+id/single_option_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sigerselect"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/single_option_D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sigerselect"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/multiOptionGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/question"
        android:layout_below="@+id/single_option_group"
        android:layout_margin="16dp"
        android:layout_toEndOf="@+id/id"
        android:background="@color/air_speed_label"
        android:foreground="@color/transparent"
        android:orientation="vertical"
        android:transitionGroup="true"
        android:visibility="visible"
        android:weightSum="3">

        <CheckBox
            android:id="@+id/multiOptionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:checked="false"
            android:text="@string/mutiselect"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp"
            android:visibility="visible"/>

        <CheckBox
            android:id="@+id/multiOptionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/mutiselect"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp"
            android:visibility="visible"/>

        <CheckBox
            android:id="@+id/multiOptionC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/mutiselect"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp"
            android:visibility="visible"/>

        <CheckBox
            android:id="@+id/multiOptionD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/mutiselect"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp"
            android:visibility="visible"/>

        <CheckBox
            android:id="@+id/multiOptionE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/mutiselect"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp"
            android:visibility="visible"/>

        <CheckBox
            android:id="@+id/multiOptionF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/mutiselect"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp"
            android:visibility="visible"/>
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/test_answer_list"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignWithParentIfMissing="false"/>


</RelativeLayout>